tests/parsing/smtlib/mcil/errors/230_define-system_bad_subsys_decl_2.expected
File "tests/parsing/smtlib/mcil/errors/230_define-system_bad_subsys_decl_2.mcil", line 1, character 29-30:
1 | (define-system sys :subsys (a))
                                 ^
Error while parsing a subsystem declaration, read a closing parenthesis,
      but expected a call to a defined system of the form (input_arg1 ...
      input_argN output_arg1 ... output_argN).
